[package]
name = "sisterm"
version = "2.1.0"
authors = ["kmgy <bhnk1270223@gn.iwasaki.ac.jp>"]
edition = "2018"
description = "A simple terminal with syntax highlighting"
license = "MIT"
repository = "https://github.com/kumavale/sisterm"
readme = "README.md"
keywords = ["serial", "terminal", "cli", "color"]
categories = ["command-line-utilities"]

[[bin]]
name = "sist"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
clap = "2.33.1"
regex = "1.3.7"
chrono = "0.4.11"
serde = { version = "1.0.110", features = ["derive"] }
toml = "0.5.6"
lazy_static = "1.4.0"
libc = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "processenv",
    "winbase",
    "wincon",
    "winnt",
]

[target.'cfg(unix)'.dependencies]
nix = "0.17"
