[package]
name = "sisterm"
version = "3.0.2"
authors = ["kumavale"]
edition = "2018"
description = "A simple terminal with syntax highlighting"
license = "MIT"
repository = "https://github.com/kumavale/sisterm"
readme = "README.md"
keywords = ["serial", "terminal", "cli", "color"]
categories = ["command-line-utilities"]
build = "build.rs"

[[bin]]
name = "sist"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
regex = "1.5.4"
chrono = "0.4.19"
serde = { version = "1.0.132", features = ["derive"] }
toml = "0.8.12"
lazy_static = "1.4.0"
rustyline = "16.0.0"
tokio = { version = "1.20", features = ["full"] }
ssh2 = "0.9"
rpassword = "7.0"
getch-rs = "0.2"
clap = { version = "4.5.4", features = ["derive", "cargo"] }

[build-dependencies]
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "consoleapi",
    "handleapi",
    "processenv",
    "winbase",
    "wincon",
    "winuser",
]
[target.'cfg(windows)'.dependencies.libc]
version = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["process", "signal"] }
